--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "node --watch src/app.js "
+    "dev": "node --watch src/app.js",
+    "start": "node src/app.js"
   },
   "keywords": [],
   "author": "Nicolas Caci",
